# MusicMech

./: .gitignore  output.txt
MusicMech_Client/: CMakeLists.txt  main.cpp
MusicMech_Server/: CMakeLists.txt  main.cpp
rc/Beatmaps/: beatmap_list.txt
rc/Beatmaps/0/: PSYQUI - Hysteric Night Girl.mm  [4P] PSYQUI - Hysteric Night Girl.mm
rc/Beatmaps/1119169/: Yorushika - Itte.mm  [4P] Yorushika - Itte. (Xen) [Expert].mm
rc/Beatmaps/1252820/: Akatsuki Records - Adieu, to this Lively Graveyard.mm  [4P] Akatsuki Records - Adieu, to this Lively Graveyard.mm
rc/Beatmaps/1343133/: Masayoshi Soken - Return to Oblivion.mm  [4P] Masayoshi Soken - Return to Oblivion.mm
rc/Beatmaps/1493511/: Police Piccadilly feat. KAFU - Furachi na Kassai.mm
rc/Beatmaps/1742219/: Inugami Korone - Doggy god's street.mm  [4P] Inugami Korone - Doggy god's street.mm
rc/Beatmaps/1772712/: DECO27 - Ai Kotoba IV feat. Hatsune Miku.mm  [2P] DECO27 - Ai Kotoba IV feat. Hatsune Miku.mm  [4P] DECO27 - Ai Kotoba IV feat. Hatsune Miku.mm  [TEST] DECO27 - Ai Kotoba IV feat. Hatsune Miku.mm
rc/Beatmaps/1772712 DECO 27 - Ai Kotoba IV feat. Hatsune Miku/: DECO27 - Ai Kotoba IV feat. Hatsune Miku ([Hatsune Miku]) [Daisuki].osu  DECO27 - Ai Kotoba IV feat. Hatsune Miku ([Hatsune Miku]) [Surou's Hard].osu  DECO27 - Ai Kotoba IV feat. Hatsune Miku ([Hatsune Miku]).osb  [2P] DECO27 - Ai Kotoba IV feat. Hatsune Miku.mm  [TEST] DECO27 - Ai Kotoba IV feat. Hatsune Miku.mm
rc/Beatmaps/1790032/: Owl City - Cloud Nine.mm  [4P] Owl City - Cloud Nine.mm
rc/Beatmaps/239584/: IOSYS - Third Eye ya!.mm
rc/Beatmaps/285089 Microsoft - Windows XP Startup/: Microsoft - Windows XP Startup (nookls) [Home Edition].osu  Microsoft - Windows XP Startup (nookls) [Media Center Edition].osu  Microsoft - Windows XP Startup (nookls) [Professional].osu  Microsoft - Windows XP Startup (nookls).osb
rc/Beatmaps/301830/: Paramore - Still Into You.mm  [4P] Paramore - Still Into You.mm
rc/Beatmaps/30328/: Bruno Mars - The Lazy Song.mm
rc/Beatmaps/522233/: Masayoshi Soken - Metal - Brute Justice Mode.mm  [4P] Masayoshi Soken - Metal - Brute Justice Mode.mm
rc/Beatmaps/546820 YUC'e - Future Candy/: YUC'e - Future Candy (Nathan).osb
rc/Beatmaps/826430/: MANUEL - GAS GAS GAS.mm  [4P] MANUEL - GAS GAS GAS.mm
rc/Shader/: animatedbubbles.frag  blur.frag  flash.frag  radflash.frag  rainbow.frag  rainbowborder.frag  sinewave.frag  test.vert  vertibar.frag  wave.frag
refs/: Menu Beatmap.xcf  Menu Lobby.xcf  Menu Room.xcf  Menu Room2.xcf  Titre.xcf  cartes.xcf  debuff.xcf  mainmenu.xcf  tuto.xcf
refs/code map/: adieu.txt  aikotoba2p.txt  aikotoba4p.txt  cloudnine.txt  e8s.txt  gaas.txt  itte.txt  korone.txt  metal.txt  tuto.txt
refs/design map/: Furachi na Kassai.pptx  Third eyer.pptx
refs/discord/: icon.xcf  teaser_1.xcf
scripts/: blur_parameters.py
src/: ArrowShape.cpp  BeatmapSelection.cpp  BeatmapSelection.h  Client.cpp  Client.h  DJ.h  EndScreen.cpp  EndScreen.h  Game.cpp  Game.h  Joueur.cpp  Joueur.h  Lobby.cpp  Lobby.h  LobbyMenu.cpp  LobbyMenu.h  LobbySelection.cpp  LobbySelection.h  MainMenu.cpp  MainMenu.h  MapsCode.cpp  MapsCode.h  Mechanic.cpp  Mechanic.h  MenuCustomizeProfile.cpp  MenuCustomizeProfile.h  MenuProfile.cpp  MenuProfile.h  PlayerIndicator.cpp  PlayerIndicator.h  PlayerInfo.h  Random.h  RessourceLoader.cpp  RingShape.cpp  RingShape.h  RoomCreation.cpp  RoomCreation.h  RoomMenu.cpp  RoomMenu.h  RoomStatus.cpp  (+22 more)
src/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Joueur.cpp  Joueur.h  Totem.cpp  Totem.h
src/Graphics/: ArrowShape.cpp  ArrowShape.h  BackgoundAnimation.cpp  BackgoundAnimation.h  Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  Caroussel.cpp  Caroussel.h  FlexRectangle.cpp  FlexRectangle.h  LoadingScreen.cpp  LoadingScreen.h  PlayerIndicator.cpp  PlayerIndicator.h  RingShape.cpp  RingShape.h  RoundedRectangle.cpp  RoundedRectangle.h  ShiftColor.cpp  ShiftColor.h
src/Mechanics/: ActivateTotem.cpp  ActivateTotem.h  AddArena.cpp  AddArena.h  ApplyDebuff.cpp  ApplyDebuff.h  ClearArenaa.cpp  ClearArenaa.h  Cone.cpp  Cone.h  DisplayImage.cpp  DisplayImage.h  Donut.cpp  Donut.h  EndMap.cpp  EndMap.h  Mechanic.cpp  Mechanic.h  MoveArena.cpp  MoveArena.h  MoveEntity.cpp  MoveEntity.h  NopeZone.cpp  NopeZone.h  RemoveArena.cpp  RemoveArena.h  RotateArena.cpp  RotateArena.h  SnapArena.cpp  SnapArena.h  Spread.cpp  Spread.h  Tether.cpp  Tether.h  TetherIndicator.cpp  TetherIndicator.h  TextIndicator.cpp  TextIndicator.h  Tower.cpp  Tower.h  (+2 more)
src/Network/: Client.cpp  Client.h  Lobby.cpp  Lobby.h  PlayerInfo.h  Server.cpp  Server.h  TCP_Socket.cpp  TCP_Socket.h  UDP_Port.cpp  UDP_Port.h
src/System/: Arena.cpp  Arena.h  DJ.h  Debuff.cpp  Debuff.h  Ifloat.cpp  Ifloat.h  Profile.cpp  Profile.h  Random.h  RessourceLoader.h  Song.cpp  Song.h  SongData.cpp  SongData.h  StatisticCounter.cpp  StatisticCounter.h  Utils.cpp  Utils.h
